# board-bee

./: .clang-format  .clang_format  .gitignore  CMakeLists.txt  Makefile  README.md  sample.json  sample.toml
libs/: CMakeLists.txt  aliases.h  ansi.cc  ansi.h  arena_allocator.h  c_str_utils.h  json.h  rose_time.h
libs/json/: exceptions.h  node.cc  node.h  parser.cc  parser.h  structure.cc  structure.h  tokenizer.cc  tokenizer.h  writer.cc  writer.h
libs/time/: date_time.cc  date_time.h  exceptions.h
schema/v0_0/: board.json  event.json  item.json  metadata.json  task.json
src/: exceptions.h  main.cc
src/structures/: board.cc  board.h  date_time.cc  date_time.h  event.cc  event.h  flags.cc  flags.h  item.cc  item.h  task.cc  task.h
